<resources>
    <string name="app_name">绿色通道</string>
    <!--<string name="app_name">GreenRoad</string>-->
    <string name="hint_password">请输入密码</string>
    <string name="hint_username">请输入账号</string>
    <string name="login">登录</string>
    <string name="action_settings">设置</string>
    <string name="navigation_drawer_open">打开侧滑栏</string>
    <string name="navigation_drawer_close">关闭侧滑栏</string>
    <string name="has_shot">提交展示</string>
    <string name="has_not_sent">草稿展示</string>
    <string name="tv_car_number">车牌</string>
    <string name="action_person_identify">人工识别</string>
    <string name="tv_car_goods">货物</string>
    <string name="tv_car_body">车身</string>
    <string name="static_tv_operator">操作员</string>
    <string name="static_tv_space">剩余空间</string>
    <string name="static_tv_net_state">网络状态</string>
    <string name="ok_send">确定</string>
    <string name="text_car_number_sure">车牌号</string>
    <string name="text_station_name_sure">站名称</string>
    <string name="text_car_goods_sure">货物</string>
    <string name="dialog_title_sure">确认货物信息</string>
    <string name="dialog_messge_sure">1234</string>
    <string name="dialog_messge_OK">确认</string>
    <string name="dialog_message_Cancel">取消</string>
    <string name="company_name">深圳市华天成科技有限公司</string>
    <string name="shut_camera">拍摄照片</string>
    <string name="sure_goods_type">采集车辆信息</string>
    <string name="menu_bar_title_cancer">取消</string>
    <string name="yellow_car">黄牌</string>
    <string name="blue_car">蓝牌</string>
    <string name="about_app">关于</string>
    <string name="update_app">更新</string>
    <string name="cancel_count">清除</string>
    <string name="activity_about_version">版本号:</string>
    <string name="activity_about_Activation_code">终端ID：</string>
    <string name="prompt_activation_code">终端ID</string>
    <string name="activation_tips">勾选即同意用户协议内容</string>
    <string name="activation_network_info">注意：激活时请确保网络已正常连接。</string>
    <string name="action_sign_in">激活</string>
    <string name="action_sign_out">退出</string>
    <string name="key_used">激活码已使用</string>
    <string name="Invalid_Key">激活码无效</string>
    <string name="back_up_app">退出</string>
    <string name="Retry">请重试</string>
    <string name="network_error">网络无连接</string>
    <string name="Wrong_format_key">激活码格式不正确</string>
    <string name="sure_number">请输入完整车牌号</string>
    <string name="sure_station">请确定站名</string>
    <string name="post_upload_not">提交</string>
    <string name="shou_fei_zhan">收费站</string>
    <string name="error_invalid_password">无效的密码</string>
    <string name="error_field_required">账号不能为空</string>
    <string name="theme_app">主题</string>
    <string name="nav_model">模式</string>
    <string name="shoot_video">录制视频</string>
    <string name="nav_preview">预览</string>
    <string name="preview_photo">预览信息</string>
    <string name="setting_login_road">登记路段</string>
    <string name="setting_login_station">登记站</string>
    <string name="text_selection">选择</string>
    <string name="setting_default">默认设置</string>
    <string name="config_default">默认配置</string>
    <string name="check_isPass">审核通过</string>
    <string name="check_notPass">审核不通过</string>
    <string name="setting_login_lane">默认车道</string>
    <string name="setting_current_shift">班次</string>
    <string name="setting_operator">检查人/登记人</string>
    <string name="add">添加</string>
    <string name="add_operator">新增检查人/登记人</string>
    <string name="delete">删除</string>


    <!--abcdefghijklmnopqrstuvwxyz-->
    <string name="alphabet_and_number">ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="alphabet_and_point">.0123456789</string>


</resources>
