<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbac"
    android:padding="16dp"
    tools:context="com.zero.wolf.greenroad.LoginActivity">

    <FrameLayout
        android:id="@+id/layout_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/text_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>


        <ImageButton
            android:layout_gravity="right|center_vertical"
            android:background="@drawable/pop_drop_down"
            android:id="@+id/popup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input"
        android:layout_below="@id/layout_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:imeActionId="@+id/login"

            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/check_box_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input"
        android:text="记住密码"/>

    <Button
        android:id="@+id/bt_login"
        style="@style/style_button_sure"
        android:layout_below="@id/check_box_pwd"
        android:layout_marginTop="@dimen/layout_margin10dp"
        android:text="@string/login"
       />


<!--    <Button

        android:id="@+id/bt_login1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_login"
        android:layout_marginTop="16dp"
        android:text="@string/login"/>-->


</RelativeLayout>
