<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/content_layout_backgroud"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context="com.zero.wolf.greenroad.activity.PhotoActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_photo"
        style="@style/style_toolbar"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

   <!-- <ToggleButton
        android:id="@+id/toggleButton_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin10dp"
        android:layout_marginTop="@dimen/layout_margin5dp"
        android:background="@drawable/toggle_selector"
        android:checked="true"
        android:textOff="@string/blue_car"
        android:textOn="@string/yellow_car"
        android:textSize="@dimen/text18"
        android:textStyle="bold"/>-->

    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:background="@drawable/sure_button_select"
            android:text="黄牌"
            android:layout_width="@dimen/layout_margin40dp"
            android:layout_height="@dimen/layout_margin40dp"/>
        <RadioButton
            android:text="绿牌"
            android:layout_width="@dimen/layout_margin40dp"
            android:layout_height="@dimen/layout_margin40dp"/>
        <RadioButton
            android:text="黑牌"
            android:layout_width="@dimen/layout_margin40dp"
            android:layout_height="@dimen/layout_margin40dp"/>
        <RadioButton
            android:text="蓝牌"
            android:layout_width="@dimen/layout_margin40dp"
            android:layout_height="@dimen/layout_margin40dp"/>


    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout_number"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            style="@style/text_view_2_car"
            android:layout_marginLeft="40dp"
            android:background="@drawable/shape_line_rect_13"
            android:text="@string/tv_car_number"/>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_car_number"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:paddingRight="@dimen/layout_margin10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/car_number_dark"
            app:riv_border_color="@color/toolbar_color"
            app:riv_border_width="3dp"
            app:riv_corner_radius_bottom_right="20dp"
            app:riv_corner_radius_top_left="20dp"
            app:riv_mutate_background="true"
            app:riv_oval="false"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_car_body"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:paddingLeft="@dimen/layout_margin10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/car_body_dark"
            app:riv_border_color="@color/toolbar_color"
            app:riv_border_width="3dip"
            app:riv_corner_radius_bottom_left="20dp"
            app:riv_corner_radius_top_right="20dp"
            app:riv_oval="false"/>

        <TextView
            style="@style/text_view_2_car"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_line_rect_2"
            android:text="@string/tv_car_body"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="@dimen/layout_margin40dp"
        android:orientation="horizontal">

        <TextView
            style="@style/text_view_2_car"
            android:layout_marginLeft="20dp"
            android:background="@drawable/shape_line_rect_13"
            android:text="@string/tv_car_goods"/>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_car_goods"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:paddingRight="@dimen/layout_margin10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/car_goods_dark"
            app:riv_border_color="@color/toolbar_color"
            app:riv_border_width="3dp"
            app:riv_corner_radius_bottom_right="20dp"
            app:riv_corner_radius_top_left="20dp"
            app:riv_mutate_background="true"
            app:riv_oval="false"/>

    </LinearLayout>

    <include
        android:id="@+id/layout_show_3_car"
        layout="@layout/show_3_car_camera"/>


    <Button
        android:id="@+id/bt_ok_send"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_height_dp60"
        android:layout_marginBottom="@dimen/layout_margin5dp"
        android:layout_marginLeft="@dimen/layout_margin20dp"
        android:layout_marginRight="@dimen/layout_margin20dp"
        android:layout_marginTop="@dimen/layout_margin10dp"
        android:background="@drawable/sure_button_select"
        android:gravity="center"
        android:text="@string/ok_send"
        android:textSize="@dimen/text24"/>

</LinearLayout>
